style.css
* {
  box-sizing: border-box;
  font: inherit;
}

h1{
  text-align: center;
  margin: 0;
  font-size: 2em ;
  font-weight: bold;
  /* font-family: '' */
}

body{
  font-family: sans-serif;
  background: #add8e6;
  font-size: 16;
  line-height: 1.3;
}
.grid-container{
  display: grid;
  grid-template-columns: 32% 36% 32%;
  grid-template-rows: 80% 20%;
  justify-content: space-evenly;
}

.grid-item {
  padding: 7px 5px;
}

.col1 {
  grid-column-start: 1;
  grid-column-end: 1;
}

.col2 {
  grid-column-start: 2;
  grid-column-end: 2;
}

.row2{
  height: 30px;
}

.col3 {
  grid-column-start: 3;
  grid-column-end: 3;
  margin: 0 2%;
}

.row1 {
  grid-row-start: 1;
  grid-row-end: 1;
}

.row2 {
  grid-row-start: 2;
  grid-row-end: 2;
}
.pAboveCanvas{
  display: inline-block;
}
#wordToDraw{
  min-height: 16px;
}
#button_clear_all{
  opacity: 0;
}
#button_clear_all:hover{
  opacity: 1;
}
#button_clear{
  width: 90%;
  height: inherit;
  margin: auto;
  display: block;
}
#button_clear:hover{
  cursor: pointer;
}
textarea{

}
input{
   font-family: inherit;
   font-size: inherit;
   width: calc(100% - 52px);
   height: inherit;
}
#send{
  float: right;
  width: 50px;
  height: inherit;
}
#chat{
  font-family: inherit;
  font-size: inherit;
  width: 100%;
  height: 100%;
  resize: none;
}
#userlist{
  width: 100%;
  height: 200px;
  resize: none;
}
#canvas{
  width: 100%;
  border:1px solid #000;
  background: white;
}
#drawingsquare{
  width: 90%;
  margin: auto;
  /* padding-top: 100%; */
}
/* #canvas:hover{
  cursor: not-allowed;
} */

